// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indentEdgeReset renders 0 1`] = `
Array [
  .c0 {
  indent-edge-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 0;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders function 1`] = `
Array [
  .c0 {
  indent-edge-reset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: has;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: has;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders invalid theme path 1`] = `
Array [
  .c0 {
  indent-edge-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders negative number 1`] = `
Array [
  .c0 {
  indent-edge-reset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  indent-edge-reset: July;
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: July;
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    indent-edge-reset: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    indent-edge-reset: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  indent-edge-reset: July;
}

@media May {
  .c0 {
    indent-edge-reset: August;
  }
}

@media April {
  .c0 {
    indent-edge-reset: September;
  }
}

@media January {
  .c0 {
    indent-edge-reset: November;
  }
}

@media April {
  .c0 {
    indent-edge-reset: August;
  }
}

@media June {
  .c0 {
    indent-edge-reset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: July;
}

@media May {
  .c0 {
    indent-edge-reset: August;
  }
}

@media April {
  .c0 {
    indent-edge-reset: September;
  }
}

@media January {
  .c0 {
    indent-edge-reset: November;
  }
}

@media April {
  .c0 {
    indent-edge-reset: August;
  }
}

@media June {
  .c0 {
    indent-edge-reset: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    indent-edge-reset: November;
  }
}

@media April {
  .c0 {
    indent-edge-reset: January;
  }
}

@media January {
  .c0 {
    indent-edge-reset: December;
  }
}

@media April {
  .c0 {
    indent-edge-reset: April;
  }
}

@media June {
  .c0 {
    indent-edge-reset: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    indent-edge-reset: November;
  }
}

@media April {
  .c0 {
    indent-edge-reset: January;
  }
}

@media January {
  .c0 {
    indent-edge-reset: December;
  }
}

@media April {
  .c0 {
    indent-edge-reset: April;
  }
}

@media June {
  .c0 {
    indent-edge-reset: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    indent-edge-reset: July;
  }
}

@media April {
  .c0 {
    indent-edge-reset: August;
  }
}

@media January {
  .c0 {
    indent-edge-reset: September;
  }
}

@media April {
  .c0 {
    indent-edge-reset: November;
  }
}

@media June {
  .c0 {
    indent-edge-reset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    indent-edge-reset: July;
  }
}

@media April {
  .c0 {
    indent-edge-reset: August;
  }
}

@media January {
  .c0 {
    indent-edge-reset: September;
  }
}

@media April {
  .c0 {
    indent-edge-reset: November;
  }
}

@media June {
  .c0 {
    indent-edge-reset: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    indent-edge-reset: January;
  }
}

@media April {
  .c0 {
    indent-edge-reset: December;
  }
}

@media January {
  .c0 {
    indent-edge-reset: April;
  }
}

@media April {
  .c0 {
    indent-edge-reset: May;
  }
}

@media June {
  .c0 {
    indent-edge-reset: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    indent-edge-reset: January;
  }
}

@media April {
  .c0 {
    indent-edge-reset: December;
  }
}

@media January {
  .c0 {
    indent-edge-reset: April;
  }
}

@media April {
  .c0 {
    indent-edge-reset: May;
  }
}

@media June {
  .c0 {
    indent-edge-reset: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders postitive number 1`] = `
Array [
  .c0 {
  indent-edge-reset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders string 1`] = `
Array [
  .c0 {
  indent-edge-reset: July;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: July;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: June;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: June;
}

<div
    className="c0"
  />,
]
`;

exports[`indentEdgeReset renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`indentEdgeReset renders valid theme path 1`] = `
Array [
  .c0 {
  indent-edge-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  indent-edge-reset: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
